# PersonalFinance

./: .gitignore  CMakeLists.txt  FinanceConfig.cmake.in  FinanceConfigVersion.cmake.in  LICENSE  README.md
apps/: CMakeLists.txt  main.cpp
cmake/: AddGoogleTest.cmake  FinanceConfig.cmake.in  PersonalFinanceConfig.cmake.in
demos/: CMakeLists.txt  clean.sh  createDemo.sh  main.cpp  main.hpp
docs/: versions.txt
include/finance/: Loan.hpp  Money.hpp
include/personalFinance/: Date.hpp  Loan.hpp  Money.hpp  config.hpp
src/: CMakeLists.txt  Date.cpp  Loan.cpp  Money.cpp  Money.hpp  Percent.cpp  Percent.hpp  config.hpp.in  utils.hpp
src/tests/: CMakeLists.txt  LoanTest.cpp  MoneyTests.cpp  MoneyTests.hpp
tests/: CMakeLists.txt  DateTests.cpp  LoanTests.cpp  LoanTests.hpp  MoneyTests.cpp  MoneyTests.hpp
tools/bash/: build.sh  clean.sh  configure.sh  install.sh  utils.shlib
tools/python/: FinanceCli.py  setup.py
